--- a/Copia-de-Invitación.css
+++ b/Copia-de-Invitación.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: url("images/inv.mp4");
+  background-image: url("images/Copiademickey.png");
   background-position: 50% 50%;
 }
 
